--- a/src/components/testimonial/testimonial.css
+++ b/src/components/testimonial/testimonial.css
@@ -212,6 +212,12 @@
         width: var(--container--width-sm);
     }
 
+    .testimonial
+    {
+        width: 60%;
+       
+    }
+
     .star-rating {
         gap: 0.3rem;
     }
